--- a/src/pages/feedback/styles.module.scss
+++ b/src/pages/feedback/styles.module.scss
@@ -1,10 +1,30 @@
-.feedback{
-   &__top{
-      display: flex;
-      justify-content: space-between;
-      color: #f1f1f1;
-      font-weight: 600;
-      font-size: 36px;
-      margin: 0px 0px 40px 0px;
+
+
+.feedback {
+   &__top {
+     display: flex;
+     justify-content: space-between;
+     color: #f1f1f1;
+     font-weight: 600;
+     font-size: 36px;
+     margin: 0 0 40px;
    }
-}
+ 
+   &__title {
+     /* Your styles here */
+   }
+ 
+   &__score {
+     /* Your styles here */
+   }
+ }
+ 
+ .loading {
+   color: #f1f1f1;
+   font-size: 24px;
+ }
+ 
+ .error {
+   color: red;
+   font-size: 24px;
+ }
