--- a/src/pages/main-page/top-bar/styles.module.scss
+++ b/src/pages/main-page/top-bar/styles.module.scss
@@ -1,11 +1,19 @@
+@use '../../../assets/style/global.scss' as *;
+
 .topBar{
    display: flex;
    justify-content: center;
-   padding: 40px 0px 40px 0px;
+   // padding: 40px 0px 40px 0px;
+   @include adaptiv-value('padding-top', 40, 12, 1);
+
+   // @media (max-width: 1600px){
+   //    padding: 30px 0;
+   // }
    &__list{
       display: flex;
       align-items: center;
-      gap: 12px;
+      // gap: 12px;
+      @include adaptiv-value('gap', 12, 0, 1);
    }
 
    &__item{
@@ -23,6 +31,15 @@
       padding: 0 32px;
       border-radius: 27px;
       transition: all .3s ease-in-out;
+
+      @media (max-width: $md2+px){
+         font-size: 18px;
+      }
+      @media (max-width: $md3+px){
+         font-size: 16px;
+         height: 44px;
+         padding: 0 26px;
+      }
 
       &_active{
          // background: #3D4046;
