--- a/src/pages/new-analysis/choose-student/styles.module.scss
+++ b/src/pages/new-analysis/choose-student/styles.module.scss
@@ -1,43 +1,39 @@
-.chooseStudent{
+@use '../../../assets/style/global.scss' as *;
 
+.chooseStudent{
+   @media (max-width: $md3+px){
+      max-width: 360px;
+   }
+   @media (max-width: $md4+px){
+      max-width: none;
+   }
    &__main{
       display: flex;
       align-items: flex-end;
+      width: 100%;
    }
 
    &__wrapper{
       position: relative;
+      width: 100%;
+   }
+
+   &__select{
+      width: 100%;
    }
 
    &__text{
       display: flex;
       align-items: center;
       justify-content: space-between;
+      width: 100%;
       height: 100%;
       padding: 0 24px;
-
-      &.active{
-         svg{
-            transform: rotate(180deg);
-         }
-      }
-   }
-
-   &__label{
-      height: 50px;
-      // background: #3D4046;
-      background: rgb(24 24 27);
-      color: #f1f1f1;
-      border-radius: 20px;
-      width: 283px;
-      font-size: 18px;
-      font-weight: 500;
-      cursor: pointer;
-      transition: background .3s ease-in-out;
-
+      line-height: 1.2;
+      
 
       svg{
-         width: 16px;
+         flex: 0 0 16px;
          height: 10px;
          position: relative;
          z-index: 10;
@@ -47,6 +43,40 @@
             fill: #f1f1f1;
          }
       }
+
+      &.active{
+         svg{
+            transform: rotate(180deg);
+         }
+      }
+   }
+
+   &__name{
+      // flex: 0 0 auto;
+      width: calc(100% - 16px);
+      padding: 0px 10px 0px 0px;
+      display: flex;
+      span{
+         flex: 1 1 auto;
+         @include truncate(1, 1.2);
+      }
+   }
+
+   &__label{
+      height: 50px;
+      // background: #3D4046;
+      background: rgb(24 24 27);
+      color: #f1f1f1;
+      border-radius: 20px;
+      width: 100%;
+      // width: 283px;
+      font-size: 18px;
+      font-weight: 500;
+      cursor: pointer;
+      transition: background .3s ease-in-out;
+
+
+
 
       @media(any-hover: hover){
          &:hover{
@@ -65,6 +95,8 @@
       visibility: hidden;
       transition: all .3s ease-in-out;
       pointer-events: none;
+      display: flex;
+      flex-direction: column;
 
       &.active{
          opacity: 1;
@@ -213,8 +245,10 @@
    }
 
    &__list{
+      flex: 0 0 100%;
+      width: 100%;
       max-height: 176px;
-      overflow: auto;
+      overflow-y: auto;
       // background: #3D4046;
       background: rgb(24 24 27);
 
@@ -250,6 +284,10 @@
       align-items: center;
       color: #f1f1f1;
       transition: all .3s ease-in-out;
+      
+      span{
+         @include truncate(1, 1.2);
+      }
 
       &.active{
          color: #1DB1C8;
