--- a/src/pages/new-analysis/video-editor/video-info/styles.module.scss
+++ b/src/pages/new-analysis/video-editor/video-info/styles.module.scss
@@ -1,3 +1,5 @@
+@use '../../../../assets/style/global.scss' as *;
+
 .videoInfo{
    
 
@@ -44,6 +46,10 @@
       padding: 40px 40px;
       display: flex;
       flex-direction: column;
+
+      @media (max-width: $md1+px){
+         padding: 15px 0;
+      }
       
    }
 
@@ -52,6 +58,11 @@
       font-weight: 600;
       color: #f1f1f1;
       margin: 20px 0px 30px 0px;
+
+      @media (max-width: $md1+px){
+         font-size: 20px;
+         margin: 10px 0px 20px 0px;
+      }
    }
 
    &__list{
@@ -63,12 +74,20 @@
       flex-direction: column;
       gap: 30px;
       flex: 1 1 auto;
+
+      @media (max-width: $md1+px){
+         gap: 16px;
+      }
    }
 
    &__item{
       display: flex;
       align-items: center;
       gap: 24px;
+
+      @media (max-width: $md1+px){
+         gap: 16px;
+      }
    }
 
    &__keys{
@@ -89,7 +108,21 @@
       font-size: 18px;
       border-radius: 10px;
 
+      @media (max-width: $md1+px){
+         width: 36px;
+         height: 36px;
+         font-size: 13px;
+         border-radius: 8px;
+      }
+
       svg{
+         width: 24px;
+         height: 24px;
+
+         @media (max-width: $md1+px){
+            width: 20px;
+            height: 20px;
+         }
          path{
             stroke: #f1f1f1;
          }
@@ -113,6 +146,11 @@
       font-size: 16px;
       gap: 16px;
       cursor: pointer;
+
+      @media (max-width: $md1+px){
+         margin: 30px 0px 15px 0px;
+         gap: 12px;
+      }
 
       svg{
          path{
