--- a/src/pages/new-analysis/video-editor/video-ticks/styles.module.scss
+++ b/src/pages/new-analysis/video-editor/video-ticks/styles.module.scss
@@ -3,7 +3,7 @@
    width: 100%;
    height: 30px;
    z-index: 11;
-   background-color: #303030;
+   // background-color: #303030;
    // border-bottom: 1px solid rgba(35, 35, 35, 0.3);
    // border-radius: 5px;
    // cursor: pointer;
@@ -45,7 +45,8 @@
       color: #aaa;
       position: absolute;
       top: 0px;
-      background-color: #303030;
+      // background-color: #303030;
+      background: rgb(24 24 27);
       padding: 4px 0;
       // transform: translateX(-50%);
    }
