--- a/src/pages/new-analysis/video-editor/video-ticks/styles.module.scss
+++ b/src/pages/new-analysis/video-editor/video-ticks/styles.module.scss
@@ -46,7 +46,7 @@
       position: absolute;
       top: 0px;
       // background-color: #303030;
-      background: rgb(24 24 27);
+      background: rgb(24, 24, 27);
       padding: 4px 0;
       // transform: translateX(-50%);
    }
