--- a/src/components/login-form/login-button/styles.module.scss
+++ b/src/components/login-form/login-button/styles.module.scss
@@ -1,11 +1,24 @@
 .btn{
-   border-radius: 25px;
-   background: #211b21;
+   // background: #211b21;
    padding: 0 16px;
-   height: 50px;
    display: flex;
    align-items: center;
    gap: 16px;
+   height: 50px;
+   border-radius: 30px;
+   border: 2px solid rgba(238, 238, 238, 0.15);
+   font-weight: 600;
+   font-size: 18px;
+   transition: all .3s ease-in-out;
+
+
+
+      @media(any-hover: hover){
+         &:hover{
+            color: #f1f1f1;
+            border-color: rgba(238, 238, 238, 0.67);
+         }
+      }
 
    &__icon{
       flex: 0 0 20px;
@@ -14,32 +27,34 @@
       svg{
          width: 100%;
          height: 100%;
+         fill: #eee;
       }
    }
 
    &__main{
+      flex: 1 1 auto;
       position: relative;
       height: 100%;
+      color: rgba(238, 238, 238, 0.15);
+      padding: 0 10px;
       display: flex;
+      justify-content: center;
       align-items: center;
-      color: #565356;
-      padding: 0px 4px 0px 30px;
       &:before{
          content: '';
          position: absolute;
          top: 0;
          left: 0;
-         width: 1px;
+         width: 2px;
          height: 100%;
          background: currentColor;
       }      
    }
 
    &__text{
-      flex: 1 1 auto;
       font-weight: 600;
       font-size: 16px;
-      
+      color: #eee;
 
    }
 }
