--- a/src/components/login-form/styles.module.scss
+++ b/src/components/login-form/styles.module.scss
@@ -2,13 +2,12 @@
    width: 100%;
    height: 100%;
    position: absolute;
-   opacity: 0;
-   visibility: hidden;
-   transition: all .3s ease-in-out;
 
    &.active{
-      opacity: 1;
-      visibility: visible;
+      .loginFrom__body{
+         opacity: 1;
+         visibility: visible;
+      }
    }
 
    &__main{
@@ -32,9 +31,13 @@
       width: 100%;
       position: relative;
       z-index: 10;
-      background: rgba(26, 23, 26, 0.65);
-      padding: 50px 30px;
+      // background: rgba(26, 23, 26, 0.65);
+      padding: 70px 32px;
       border-radius: 40px;
+      background: rgba(24, 24, 27, 0.65);
+      opacity: 0;
+      visibility: hidden;
+      transition: all .3s ease-in-out;
    }
 
    &__title{
@@ -42,6 +45,12 @@
       font-size: 34px;
       color: #f1f1f1;
       text-align: center;
-      margin: 0px 0px 100px 0px;
+      margin: 0px 0px 32px 0px;
+   }
+
+   &__buttons{
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
    }
 }
