--- a/src/pages/new-analysis/choose-student/styles.module.scss
+++ b/src/pages/new-analysis/choose-student/styles.module.scss
@@ -1,6 +1,10 @@
 @use '../../../assets/style/global.scss' as *;
 
 .chooseStudent{
+   @media (min-width: $md2+px){
+      width: 320px;
+      flex: 0 0 320px;
+   }
    @media (max-width: $md3+px){
       max-width: 360px;
    }
