--- a/src/pages/new-analysis/sidebar/styles.module.scss
+++ b/src/pages/new-analysis/sidebar/styles.module.scss
@@ -1,63 +1,95 @@
-.sidebar{
-   position: absolute;
-   bottom: 0;
-   left: 50%;
-   transform: translateX(-50%);
-   width: auto;
+.sidebar {
+   position: fixed;
+   top: 0;
+   left: 10px;
+   // transform: translateY(-50%);
+   width: 190px;
    background-color: rgba(55, 66, 77, 0.25);
-   display: flex;
-   justify-content: center;
-   align-items: center;
+   // display: flex;
+   // justify-content: center;
+   // align-items: center;
    padding: 10px 0;
-   border-radius: 50px;
+   height: 100%;
+   z-index: 1000;
 
-   &__wrapper{
+   &__wrapper {
       position: relative;
       display: flex;
-      justify-content: center;
+      // flex-direction: column;
       align-items: center;
-      height: auto;
+      height: 100%;
    }
 
-   &__toolbar{
+   &__toolbar {
       position: relative;
       display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 0;
-      margin: 0;
+      flex-direction: column;
+      // align-items: center;
       list-style: none;
+      padding: 10px;
+      margin: 0;
+      width: 100%;
    }
 
-   &__item{
-      width: 40px;
-      margin: 0 8px;
+   &__item {
+      width: 60px;
+      margin: 10px 0;
       display: flex;
       justify-content: center;
       align-items: center;
       cursor: pointer;
+      position: relative;
 
-      @media(any-hover: hover){
-         &:hover{
-            .sidebar__icon{
+      @media (any-hover: hover) {
+         &:hover {
+            .sidebar__icon {
                // transform: rotateY(180deg);
+
+               opacity: 1;
             }
+            .sidebar__title{
+               color: #f1f1f1;
+            }
+         }
+      }
+
+      &.active{
+         .sidebar__icon {
+            opacity: 1;
+         }
+         .sidebar__title{
+            color: #f1f1f1;
          }
       }
    }
 
-   &__icon{
+   &__icon {
       width: 100%;
-      // height: 100%;
-      // padding: 20px;
-      // background: #f1f1f1;
       border-radius: 50%;
-      perspective: 800px;
-      transition: all .5s ease-in-out;
+      transition: all 0.3s ease-in-out;
+      opacity: 0.6;
 
-      svg{
+      img {
          width: 100%;
          height: auto;
+         border-radius: 50%;
       }
+   }
+
+   &__title{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      padding: 0px 0px 0px 10px;
+      font-size: 12px;
+      font-weight: 500;
+      top: 50%;
+      right: 0;
+      position: absolute;
+      white-space: nowrap;
+      transform: translate(100% , -50%);
+      color: rgba(#f1f1f1, 0.6);
+      transition: all .3s ease-in-out;
    }
 }
