--- a/src/pages/new-analysis/styles.module.scss
+++ b/src/pages/new-analysis/styles.module.scss
@@ -30,7 +30,6 @@
       color: #f1f1f1;
       font-size: 26px;
       font-weight: 600;
-      margin: 0px 0px 20px 0px;
 
       @media (max-width: $md2+px){
          font-size: 20px;
@@ -42,6 +41,10 @@
       justify-content: space-between;
       gap: 40px;
       height: 100%;
+
+      @media (max-width: $md1+px){
+         gap: 24px;
+      }
 
       @media (max-width: $md3+px){
          flex-direction: column;
@@ -65,7 +68,6 @@
    }
 
    &__submit{
-      margin: 20px 0px 0px 0px;
       --b1: #2C919D;
       --b2: #9D2C8A;
       --a: 90deg;
@@ -125,7 +127,6 @@
       color: #eee;
       font-size: 16px;
       line-height: 1.3;
-      margin: 0px 0px 12px 0px;
    }
 
    &__time{
@@ -133,7 +134,7 @@
       align-items: center;
       gap: 12px;
       border-radius: 30px;
-      margin: 0px 0px 30px 0px;
+      margin: 12px 0px 0px 0px;
 
    }
 
@@ -146,6 +147,7 @@
    }
 
    &__cutBtn{
+      margin: 30px 0px 0px 0px;
       width: 100%;
       height: 50px;
       border-radius: 30px;
@@ -166,6 +168,28 @@
             border-color: rgba(238, 238, 238, 0.67);
          }
       }
+   }
+
+   &__content{
+      flex: 1 1 auto;
+   }
+
+   &__top{
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 10px;
+      margin: 0px 0px 20px 0px;
+   }
+
+   &__submitWrap{
+      background: rgb(24 24 27);
+      padding: 14px 18px;
+      border-radius: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 10px;
    }
 }
 
