--- a/src/pages/new-analysis/upload-video/styles.module.scss
+++ b/src/pages/new-analysis/upload-video/styles.module.scss
@@ -1,9 +1,8 @@
 .uploadVideo{
    &__body{
       display: flex;
-      flex-direction: column;
       align-items: flex-start;
-      margin: 20px 0px 0px 0px;
+      gap: 12px;
    }
    &__title{
       font-weight: 600;
@@ -22,21 +21,21 @@
 .uploadButton {
    display: flex;
    align-items: center;
-   background: rgb(24 24 27);
-   color: white;
-   border: none;
-   border-radius: 27px;
-   padding: 0px 26px;
-   height: 50px;
    cursor: pointer;
-   font-size: 18px;
-   font-weight: 600;
-   transition: background-color 0.3s;
    gap: 8px;
+   height: 50px;
+   padding: 0 27px;
+   border-radius: 30px;
+   border: 2px solid rgba(238, 238, 238, 0.15);
+   color: #eee;
+   font-weight: 600;
+   font-size: 18px;
+   transition: all .3s ease-in-out;
 
    @media(any-hover: hover){
       &:hover{
-         background: #1F1F23;
+         color: #f1f1f1;
+         border-color: rgba(238, 238, 238, 0.67);
       }
    }
    
