--- a/src/pages/new-analysis/styles.module.scss
+++ b/src/pages/new-analysis/styles.module.scss
@@ -57,13 +57,13 @@
       flex: 0 0 22%;
       width: 22%;
 
-      @media (max-width: $md2+px){
-         flex: 0 0 220px;
-         width: 220px;
+      @media (max-width: $md1+px){
+         flex: 0 0 14%;
+         width: 14%;
       }
-      @media (max-width: $md3+px){
-         width: auto;
-         flex: 1 1 auto;
+
+      @media (max-width: $md2+px){
+         display: none;
       }
    }
 
@@ -105,14 +105,18 @@
       flex: 0 0 26%;
       width: 26%;
 
-      @media (max-width: $md2+px){
-         flex: 0 0 250px;
-         width: 250px;
+      @media (max-width: $md1+px){
+         padding: 28px 26px;
       }
-      @media (max-width: $md3+px){
-         width: 100%;
-         flex: 1 1 auto;
-      }
+
+      // @media (max-width: $md2+px){
+      //    flex: 0 0 250px;
+      //    width: 250px;
+      // }
+      // @media (max-width: $md3+px){
+      //    width: 100%;
+      //    flex: 1 1 auto;
+      // }
    }
 
    &__cutTitle{
@@ -121,12 +125,21 @@
       color: #f1f1f1;
       line-height: 1.2;
       margin: 0px 0px 12px 0px;
+
+      @media (max-width: $md1+px){
+         font-size: 20px;
+         margin: 0px 0px 10px 0px;
+      }
    }
 
    &__descr{
       color: #eee;
       font-size: 16px;
       line-height: 1.3;
+
+      @media (max-width: $md1+px){
+         font-size: 14px;
+      }
    }
 
    &__time{
@@ -136,6 +149,9 @@
       border-radius: 30px;
       margin: 12px 0px 0px 0px;
 
+      @media (max-width: $md1+px){
+         font-size: 14px;
+      }
    }
 
    &__cut{
@@ -157,9 +173,13 @@
       font-size: 18px;
       transition: all .3s ease-in-out;
 
+      @media (max-width: $md1+px){
+         margin: 24px 0px 0px 0px;
+      }
+
       &:disabled{
          pointer-events: none;
-         opacity: 0.8;
+         opacity: 0.4;
       }
 
       @media(any-hover: hover){
