--- a/src/pages/feedback/styles.module.scss
+++ b/src/pages/feedback/styles.module.scss
@@ -1,30 +1,32 @@
 
 
 .feedback {
-   &__top {
-     display: flex;
-     justify-content: space-between;
-     color: #f1f1f1;
-     font-weight: 600;
-     font-size: 36px;
-     margin: 0 0 40px;
-   }
- 
-   &__title {
-     /* Your styles here */
-   }
- 
-   &__score {
-     /* Your styles here */
-   }
- }
- 
- .loading {
-   color: #f1f1f1;
-   font-size: 24px;
- }
- 
- .error {
-   color: red;
+  
+  padding: 30px 0;
+  &__top {
+    display: flex;
+    justify-content: space-between;
+    color: #f1f1f1;
+    font-weight: 600;
+    font-size: 34px;
+    margin: 0 0 30px;
+  }
+
+  &__title {
+    /* Your styles here */
+  }
+
+  &__score {
+    /* Your styles here */
+  }
+}
+
+.loading {
+  color: #f1f1f1;
+  font-size: 24px;
+}
+
+.error {
+  color: red;
    font-size: 24px;
  }
