--- a/src/components/login-form/styles.module.scss
+++ b/src/components/login-form/styles.module.scss
@@ -2,6 +2,7 @@
    width: 100%;
    height: 100%;
    position: absolute;
+   overflow-y: auto;
 
    &.active{
       .loginFrom__body{
@@ -14,10 +15,11 @@
       width: 100%;
       min-height: 100vh;
       display: flex;
+      padding: 20px 15px;
    }
 
    &__container{
-      max-width: 400px;
+      max-width: 360px;
       margin: 0 auto;
 
       flex: 1 1 auto;
@@ -34,7 +36,7 @@
       // background: rgba(26, 23, 26, 0.65);
       padding: 70px 32px;
       border-radius: 40px;
-      background: rgba(24, 24, 27, 0.65);
+      background: rgba(#0b8b99, 0.85);
       opacity: 0;
       visibility: hidden;
       transition: all .3s ease-in-out;
@@ -45,12 +47,43 @@
       font-size: 34px;
       color: #f1f1f1;
       text-align: center;
-      margin: 0px 0px 32px 0px;
+      margin: 0px 0px 26px 0px;
    }
 
    &__buttons{
       display: flex;
       flex-direction: column;
       gap: 12px;
+   }
+
+   &__sidebar {
+      display: flex;
+      justify-content: center;
+      position: relative;
+      padding-bottom: 5px;
+      margin: 0px 0px 28px 0px;
+   }
+
+   &__item {
+      color: #ddd;
+      position: relative;
+      cursor: pointer;
+      padding: 12px 18px;
+      font-size: 16px;
+      font-weight: 600;
+      transition: color 0.3s ease-in-out;
+   }
+
+   &__item.active {
+      color: #f1f1f1;
+   }
+
+   &__indicator {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      height: 3px;
+      background-color: #ddd;
+      transition: all 0.3s ease-in-out;
    }
 }
