--- a/src/pages/feedback/stages/styles.module.scss
+++ b/src/pages/feedback/stages/styles.module.scss
@@ -229,6 +229,19 @@
     font-weight: 400;
     line-height: 1.4;
     color: #eee;
+    padding: 0px 0px 0px 28px;
+    position: relative;
+
+    &:before{
+      content: '';
+      position: absolute;
+      top: 6.5px;
+      left: 6px;
+      width: 9px;
+      height: 9px;
+      background: currentColor;
+      border-radius: 50%;
+    }
   }
  }
  
@@ -369,7 +382,6 @@
   background: rgba(#FFCC33, 0.05);
   border: 1px solid #FFCC33;
   position: relative;
-  cursor: pointer;
 
   svg{
     position: absolute;
