--- a/src/pages/main-page/top-bar/styles.module.scss
+++ b/src/pages/main-page/top-bar/styles.module.scss
@@ -9,6 +9,10 @@
    // @media (max-width: 1600px){
    //    padding: 30px 0;
    // }
+
+   @media (max-width: 600px){
+      padding: 60px 0px 0px 0px;
+   }
    &__list{
       display: flex;
       align-items: center;
